<resources>
    <string name="app_name">ChatFirebase</string>
    <string name="new_account">New ?\n Create account here</string>
    <string name="login">Login</string>
    <string name="register">SignIn</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="photo">Photo</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="btnChat">Send</string>
    <string name="message">Write a message...</string>
</resources>
